--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<p>Our First App</p>
-<app-post-create></app-post-create>
+<app-header></app-header>
+<main>
+    <app-post-create (postCreated)="onPostAdded($event)"></app-post-create>
+    <app-post-list [posts]="storedPosts"></app-post-list>
+</main>
